# nano-rapp-west

./: .gitignore  Cargo.toml  README.md  nanos.json  nanosplus.json  nanox.json
.cargo/: config
.github/workflows/: rust.yml
doc/: Integration.md
src/: crypto.rs  internal_ui.rs  main.rs  sodium.rs  transaction.rs  transactions.rs  tx_scroller.rs  utils.rs
src/crypto/: sodium.rs
src/crypto/sodium/: field.rs
src/internal_ui/: horizontal_validator.rs
src/sodium/: field.rs  field_element_2625.rs
src/transaction/: account.rs  data_entry.rs  deserialize.rs  hash.rs  transaction_data.rs  type_id.rs  version.rs
src/transactions/: burn.rs  create_contract.rs  issue.rs  reissue.rs  transfer.rs
src/utils/: context.rs  crypto.rs  data_buffer.rs  deserialize.rs  horizontal_validator.rs  macros.rs  messages.rs  tx_scroller.rs
test/: button.py  client.py  get_pubkey.apdu  requirements.txt  sign.apdu  test_cmds.py  utils.py
