[package]
name = "nano-rapp-west"
version = "0.2.0"
authors = ["yhql"]
edition = "2021"

[dev-dependencies]
nanos_sdk = { git = "https://github.com/waves-enterprise/ledger-nanos-sdk", branch = "fix_unit_tests", features = ["speculos"] }

[dependencies]
numtoa = "0.2.4"
nanos_sdk = { git = "https://github.com/waves-enterprise/ledger-nanos-sdk", branch = "fix_unit_tests" }
nanos_ui = { git = "https://github.com/waves-enterprise/ledger-nanos-ui", branch = "fix_unit_tests" }

[profile.release]
opt-level = 'z'
lto = true

[package.metadata.nanos]
curve = "ed25519"
flags = "0"
icon = "crab.gif"
icon_small = ""
path = ""