[package]
name = "nano-rapp-west"
version = "0.2.0"
authors = ["yhql"]
edition = "2021"

[dev-dependencies]
nanos_sdk = { git = "https://github.com/LedgerHQ/ledger-nanos-sdk", features = ["speculos"] }

[dependencies]
nanos_sdk = { git = "https://github.com/LedgerHQ/ledger-nanos-sdk" }
nanos_ui = { git = "https://github.com/LedgerHQ/ledger-nanos-ui" }
numtoa = "0.2.4"
smol-base-x = "0.1.0"

[profile.release]
opt-level = 'z'
lto = true

[package.metadata.nanos]
curve = "ed25519"
flags = "0"
icon = "icons/nanos_app_west.gif"
icon_small = "icons/nanox_app_west.gif"
path = ""